# profile.mobile.apps.native.ug-setting-homescreen-efl

./: .cproject  .gitignore  .project  CMakeLists.txt  org.tizen.setting-homescreen-1.0.0-arm-debug.tpk  org.tizen.setting-homescreen-1.0.0-arm.tpk  org.tizen.setting-homescreen-1.0.0-arm_debug.tpk  org.tizen.setting-homescreen-1.0.0-i386-debug.tpk  org.tizen.setting-homescreen-1.0.0-i386.tpk  org.tizen.setting-homescreen-1.0.0-i386_debug.tpk  project_def.prop  setting-homescreen.manifest.xml  tizen-manifest.xml  ug-homescreen-setting-efl.manifest  ug-homescreen-setting-efl.xml
inc/: data.h  home-setting.h  home-style.h  home.h
packaging/: org.tizen.setting-homescreen.spec  setting-homescreen.spec  ug-homescreen-setting-efl.spec
po/: CMakeLists.txt  cs.po  de_DE.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  fi.po  fr_FR.po  gl.po  hi.po  hu.po  it_IT.po  ka.po  kk.po  lt.po  mk.po  mn_MN.po  nb.po  nl_NL.po  pl.po  pt_BR.po  ro.po  ru_RU.po  tr_TR.po  zh_TW.po
res/po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  da.po  de.po  el_GR.po  en.po  es_US.po  et.po  eu.po  fr.po  fr_CA.po  ga.po  hr.po  hy.po  is.po  ja_JP.po  ko_KR.po  lv.po  nl.po  pt_PT.po  sk.po  sl.po  sr.po  sv.po  uk.po  uz.po  zh_CN.po  zh_HK.po  zh_SG.po
src/: CMakeLists.txt  data.c  home-style.c  home.c  main.c
ug-setting-homescreen-efl/: CMakeLists.txt
ug-setting-homescreen-efl/include/: home-setting-ug-data.h  home-setting-ug-view-home-style.h  home-setting-ug-view-home.h  home-setting-ug.h
ug-setting-homescreen-efl/src/: home-setting-ug-data.c  home-setting-ug-main.c  home-setting-ug-view-home-style.c  home-setting-ug-view-home.c
